# remote-lab

./: .env  .env.example  Dockerfile  README.md  messages.pot  pyproject.toml  render.yaml  requirements.txt  run.py  seed.py
app/: __init__.py  config.py  extensions.py  models.py
app/routes/: admin_routes.py  auth_routes.py  experiment_routes.py  user_routes.py
app/services/: experiment_service.py  user_service.py  wokwi_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: 404.html  500.html  base.html  dashboard.html  experiment_view.html  experiments.html  index.html  layout.html  login.html  register.html
app/templates/admin/: dashboard.html  experiment_form.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: profile.html  student.html  submissions.html
app/templates/experiments/: detail.html  list.html
app/translations/ru/LC_MESSAGES/: messages.mo  messages.po
app/translations/uz/LC_MESSAGES/: messages.mo  messages.po
instance/: remote_lab.db  virtual_lab.db
scripts/: seed_database.py
